Add the github link

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 				</canvas>
 				<br><button onclick="start_pause();">Start/Stop</button> <button onclick="location.reload();">Restart</button>
 			</div>
+			<br>
+			<a href="https://github.com/rogerneb/Mad-Balls">Get it on GitHub</a><br>
 		</article>
 	</section>
 	<footer></footer>
